fixtures/cs-rng-01/good/shadowed-math-auth-context.ts
export function generateToken() {
	const Math = { random: () => 0.5 };
	return Math.random();
}
