fixtures/cs-rng-01/bad/local-binding-token.ts
export function readValue() {
	const token = Math.random();
	return token;
}
